--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "browserify": "^13.0.0",
     "domready": "^1.0.8",
+    "exorcist": "^0.4.0",
     "http-server": "^0.8.5",
     "nodemon": "^1.8.1"
   }
